Added base script

--- a/index.html
+++ b/index.html
@@ -3,8 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
+<div class="container">
+    <div class="slider-box">
+        <img src="images/aerial-2203634__340.jpg">
+        <img class="hidden" src="images/mixer-1322136__340.jpg">
+        <img class="hidden" src="images/turtle-1137608__340.jpg">
+        <img class="hidden" src="images/woodtype-846088__340.jpg">
+    </div>
+    <div class="button-box">
+        <button class="buttonPrev" type="button">Prev</button>
+        <button class="buttonNext" type="button">Next</button>
+    </div>
+</div>
 
 <script src="index.js"></script>
 </body>
