--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <div class="container">
     <div class="slider-box">
-        <img src="images/aerial-2203634__340.jpg">
+        <img class="active" src="images/aerial-2203634__340.jpg">
         <img class="hidden" src="images/mixer-1322136__340.jpg">
         <img class="hidden" src="images/turtle-1137608__340.jpg">
         <img class="hidden" src="images/woodtype-846088__340.jpg">
